--- a/templates/management/commune/registered_nidList.html
+++ b/templates/management/commune/registered_nidList.html
@@ -40,44 +40,22 @@
         <div class="card-body pb-20">
           <table class="table data-table-export hover nowrap">
             <thead>
-              <tr>card_number
-                date_lost
-                description
-                email
-                contact_info
-                status
-                created_date
+              <tr>
                 <th>#</th>
                 <th class="table-plus datatable-nosort">Citizen Name</th>
                 <th>NID Number</th>
-                <th>Contact</th>
-                <th>Status</th>
-                <th>Description</th>
-                <th>Date Lost</th>
-                <th>Date</th>
+                <th>Place of Issue</th>
+                <th>Date Produced</th>
+                <th>Recieved</th>
+                <th>Date Taken</th>
+                <th>Action</th>
               </tr>
             </thead>
+
             <tbody>
-              {% for data in nid_applications %}
+              {% for data in registered_nid %}
               <tr>
                 <td>{{ forloop.counter }}.</td>
-                <td>
-                  {% if data.picture %}
-                  <img
-                    class="profile-user-img img-responsive img-circle"
-                    src="{{data.picture.url}}"
-                    width="70px"
-                    alt="{{chief.first_name}} image"
-                  />
-                  {% else %}
-                  <img
-                    class="profile-user-img img-responsive img-circle"
-                    src="{% static 'staff/vendors/images/anonymous.png' %}"
-                    width="70px"
-                    alt="{{chief.first_name}} image"
-                  />
-                  {% endif%}
-                </td>
                 <td class="table-plus">
                   <a
                     class="text-info"
@@ -86,12 +64,19 @@
                     {{data.citizen.first_name}} {{data.citizen.last_name}}
                   </a>
                 </td>
-                <td>{{data.citizen.gender}}</td>
-                <td>{{data.citizen.birthdate}}</td>
-                <td>{{data.resident_address}}</td>
-                <td>{{data.email}}</td>
-                <td>{{data.status}}</td>
-                <td>{{data.citizen.createdDate}}</td>
+                <td>{{data.card_number}}</td>
+                <td>{{data.placeofissue}}</td>
+                <td>{{data.created_date}}</td>
+                <td>{{data.is_taken}}</td>
+                <td>{{data.taken_date}}</td>
+                <td>
+                  <a
+                    class="text-info"
+                    href="{% url 'chief_citizenDetails' data.citizen.id %}"
+                  >
+                    Confirm Recieved
+                  </a>
+                </td>
               </tr>
               {% endfor %}
             </tbody>
@@ -100,68 +85,6 @@
       </div>
     </div>
 
-    <div
-      class="modal fade"
-      id="checkupModal"
-      tabindex="-1"
-      role="dialog"
-      aria-labelledby="checkupModalTitle"
-      aria-hidden="true"
-    >
-      <div class="modal-dialog modal-md modal-dialog-centered" role="document">
-        <div class="modal-content">
-          <div class="modal-header">
-            <h5 class="modal-title" id="checkupModalTitle">
-              CITIZEN VERIFICATION
-            </h5>
-            <button
-              type="button"
-              class="close"
-              data-dismiss="modal"
-              aria-label="Close"
-            >
-              <span aria-hidden="true">&times;</span>
-            </button>
-          </div>
-
-          <form action="" method="post">
-            {% csrf_token %}
-            <div class="modal-body">
-              <fieldset class="py-4">
-                <legend><h6>Citizen Volume No.</h6></legend>
-                <div class="row">
-                  <div class="col-12">
-                    <div class="form-group">
-                      <label for="volume_no">Volume No.</label>
-                      <input
-                        type="text"
-                        class="form-control"
-                        name="volume_no"
-                        id="volume_no"
-                        placeholder="Volume No. ..."
-                        required
-                      />
-                    </div>
-                  </div>
-                </div>
-            </div>
-            <div class="modal-footer">
-              <button
-                type="button"
-                class="btn btn-secondary"
-                data-dismiss="modal"
-              >
-                Close
-              </button>
-              <button type="submit" name="verify_citizen" class="btn btn-info">
-                <i class="icon-copy fa fa-hourglass-half" aria-hidden="true"></i>
-                Verify Citizen
-              </button>
-            </div>
-          </form>
-        </div>
-      </div>
-    </div>
     {% endblock %}
   </body>
 </html>
