--- a/templates/management/commune/nid_applicationDetails.html
+++ b/templates/management/commune/nid_applicationDetails.html
@@ -7,7 +7,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Citizen Details</title>
+    <title>NID Application Details</title>
   </head>
 
   <body>
@@ -17,18 +17,20 @@
       <div class="row">
         <div class="col-md-6 col-sm-12">
           <div class="title">
-            <h4>Citizen Details</h4>
+            <h4>NID Application Details</h4>
           </div>
           <nav aria-label="breadcrumb" role="navigation">
             <ol class="breadcrumb">
               <li class="breadcrumb-item">
-                <a href="{% url 'chief_dashboard' %}">Dashboard</a>
+                <a href="{% url 'chief_dashboard' %}"> Dashboard </a>
               </li>
               <li class="breadcrumb-item">
-                <a href="{% url 'chief_citizens' %}">Citizens List</a>
+                <a href="{% url 'chief_nidApplications_list' %}">
+                  NID Application List
+                </a>
               </li>
               <li class="breadcrumb-item active" aria-current="page">
-                Citizen Details
+                NID Application Details
               </li>
             </ol>
           </nav>
@@ -39,24 +41,24 @@
     <div class="min-height-200px">
       <div class="card-box mb-30">
         <div class="pd-20">
-          <h4 class="h4">Citizen Details</h4>
+          <h4 class="h4">NID Application Details</h4>
         </div>
         <div class="card-body pb-20">
           <div class="row px-4">
             <div class="col-12 mb-1">
-              {% if citizen.picture %}
+              {% if data.picture %}
               <img
                 class="profile-user-img img-responsive img-circle"
-                src="{{citizen.picture.url}}"
+                src="{{data.picture.url}}"
                 width="140px"
-                alt="{{citizen.first_name}} image"
+                alt="{{data.citizen.first_name}} image"
               />
               {% else %}
               <img
                 class="profile-user-img img-responsive img-circle"
                 src="{% static 'staff/vendors/images/anonymous.png' %}"
                 width="140px"
-                alt="{{citizen.first_name}} image"
+                alt="{{data.citizen.first_name}} image"
               />
               {% endif %}
             </div>
@@ -64,57 +66,64 @@
               <span class="">
                 Full names:
                 <h4 class="title">
-                  {{ citizen.first_name }} {{ citizen.last_name }}
+                  {{ data.citizen.first_name }} {{ data.citizen.last_name }}
                 </h4>
               </span>
             </div>
             <div class="col-sm-12 col-xl-12 mb-1">
-              <p>Gender: <span class="h5">{{ citizen.gender }}</span></p>
+              <p>Gender: <span class="h5">{{ data.citizen.gender }}</span></p>
             </div>
             <div class="col-sm-12 col-xl-12 mb-1">
               <p>
                 Birth Date:
-                <span class="h5">{{citizen.birthdate|date:'d/m/Y'}}</span>
+                <span class="h5">{{data.citizen.birthdate|date:'d/m/Y'}}</span>
               </p>
             </div>
             <div class="col-sm-12 col-xl-6 mb-1">
               <p>
-                Birth Place: <span class="h5">{{citizen.birth_place}}</span>
+                Birth Place:
+                <span class="h5">{{data.citizen.birth_place}}</span>
               </p>
             </div>
             <div class="col-sm-12 col-xl-6 mb-1">
               <p>
-                Volume No.: <span class="h5">#{{citizen.volume_number}}</span>
+                Volume No.:
+                <span class="h5">#{{data.citizen.volume_number}}</span>
               </p>
             </div>
             <div class="col-sm-12 col-xl-12 mb-1">
               <p>
-                NID Card No.: <span class="h5">{{ citizen.nid_number }}</span>
+                NID Card No.:
+                <span class="h5">{{ data.citizen.nid_number }}</span>
               </p>
             </div>
             <div class="col-lg-12 my-4">
-              <h6 class="">Citizen Parents</h6>
+              <h6 class="">More Information</h6>
               <hr />
-              {% for parent in citizen.parents.all %}
-              <p class="h6 mb-1">{{ parent.parent }}</p>
+              <p class="h6 mb-1">{{ data.parent }}</p>
               <div class="row">
                 <div class="col-sm-12 col-xl-6 mb-1">
                   <p>
-                    First Name: <span class="h5">{{ parent.first_name }}</span>
+                    Resident address:
+                    <span class="h5">{{ data.resident_address }}</span>
                   </p>
                 </div>
                 <div class="col-sm-12 col-xl-6 mb-1">
+                  <p>Email: <span class="h5">{{ data.email }}</span></p>
+                </div>
+                <div class="col-sm-12 col-xl-12 mb-1">
                   <p>
-                    Last Name: <span class="h5">{{ parent.last_name }}</span>
+                    Status:
+                    <span class="h5">{{data.status}}</span>
                   </p>
                 </div>
               </div>
-              {% endfor %}
             </div>
           </div>
         </div>
       </div>
     </div>
+
     {% endblock %}
   </body>
 </html>
