--- a/templates/management/administrator/chiefCommune_list.html
+++ b/templates/management/administrator/chiefCommune_list.html
@@ -51,9 +51,8 @@
             <thead>
               <tr>
                 <th>#</th>
-                <th class="table-plus datatable-nosort" colspan="2">
-                  Chiefs Name
-                </th>
+                <th></th>
+                <th class="table-plus datatable-nosort">Chiefs Name</th>
                 <th>Gender</th>
                 <th>Commune</th>
                 <th class="datatable-nosort">Action</th>
