--- a/templates/management/administrator/citizen_details.html
+++ b/templates/management/administrator/citizen_details.html
@@ -60,12 +60,21 @@
               >
                 <i class="fa fa-edit text-primary"></i> Edit
               </button>
+              {% if citizen.picture %}
+              <img
+                class="profile-user-img img-responsive img-circle"
+                src="{{citizen.picture.url}}"
+                width="140px"
+                alt="{{citizen.first_name}} image"
+              />
+              {% else %}
               <img
                 class="profile-user-img img-responsive img-circle"
                 src="{% static 'staff/vendors/images/anonymous.png' %}"
                 width="140px"
                 alt="{{citizen.first_name}} image"
               />
+              {% endif %}
             </div>
             <div class="col-lg-12 mb-4">
               <span class="">
@@ -79,7 +88,7 @@
               <p>Gender: <span class="h5">{{ citizen.gender }}</span></p>
             </div>
             <div class="col-sm-12 col-xl-12 mb-1">
-              <p>Birth Date: <span class="h5">{{citizen.birthdate}}</span></p>
+              <p>Birth Date: <span class="h5">{{citizen.birthdate|date:'d/m/Y'}}</span></p>
             </div>
             <div class="col-sm-12 col-xl-6 mb-1">
               <p>Birth Place: <span class="h5">{{citizen.birth_place}}</span></p>
