--- a/templates/management/administrator/citizen_details.html
+++ b/templates/management/administrator/citizen_details.html
@@ -90,8 +90,11 @@
             <div class="col-sm-12 col-xl-12 mb-1">
               <p>Birth Date: <span class="h5">{{citizen.birthdate|date:'d/m/Y'}}</span></p>
             </div>
-            <div class="col-sm-12 col-xl-6 mb-1">
+            <div class="col-sm-12 col-xl-12 mb-1">
               <p>Birth Place: <span class="h5">{{citizen.birth_place}}</span></p>
+            </div>
+            <div class="col-sm-12 col-xl-6 mb-1">
+              <p>NID No.: <span class="h5">#{{citizen.nid_number}}</span></p>
             </div>
             <div class="col-sm-12 col-xl-6 mb-1">
               <p>Volume No.: <span class="h5">#{{citizen.volume_number}}</span></p>
